# qt5-qfuture-example

./: CMakeLists.txt  example.cpp  example.hpp
